@@ -1,0 +1,4 @@
+#include "version.h"
+
+char colinux_version[0x30] = COLINUX_VERSION;
+char colinux_compile_time[0x30] = COLINUX_COMPILE_TIME;
